--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <camunda.version>7.21.0-ee</camunda.version>
         Make sure you also switch to EE repository below
         -->
-        <camunda.version>7.22.0-alpha5</camunda.version>
+        <camunda.version>7.21.0</camunda.version>
         <wildfly.version>33.0.1.Final</wildfly.version>
 
         <maven.compiler.release>11</maven.compiler.release>
@@ -142,12 +142,6 @@
             <version>2.3.232</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.hibernate.orm</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>6.6.0.Final</version>
-            <scope>provided</scope>
-        </dependency>
         <!-- Used to generate test coverage reports, see https://github.com/camunda-community-hub/camunda-process-test-coverage -->
         <!-- https://mvnrepository.com/artifact/org.camunda.bpm.extension/camunda-bpm-process-test-coverage-junit4 -->
         <dependency>
@@ -160,6 +154,7 @@
             <!-- AssertJ Testing Library -->
             <groupId>org.camunda.bpm</groupId>
             <artifactId>camunda-bpm-assert</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <!--        This is only needed for the weld container unit tests-->
@@ -175,6 +170,7 @@
             <groupId>org.camunda.community.process_test_coverage</groupId>
             <artifactId>camunda-process-test-coverage-starter-platform-7</artifactId>
             <version>2.7.0</version>
+            <scope>test</scope>
         </dependency>
 
         <!-- use logback as logger -->
@@ -208,14 +204,7 @@
             <scope>test</scope>
         </dependency>
         <!-- Add your own dependencies here, if in compile scope, they are added to the war -->
-        <!-- https://mvnrepository.com/artifact/jakarta.inject/jakarta.inject-api -->
-        <dependency>
-            <groupId>org.camunda.bpm</groupId>
-            <artifactId>camunda-engine-spring</artifactId>
-            <version>${camunda.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.camunda.bpm.javaee/camunda-ejb-client -->
+
         <!-- https://mvnrepository.com/artifact/org.jboss.shrinkwrap.resolver/shrinkwrap-resolver-depchain -->
         <dependency>
             <groupId>org.jboss.shrinkwrap.resolver</groupId>
@@ -411,6 +400,10 @@
                                             <artifactId>wildfly-dist</artifactId>
                                             <version>${wildfly.version}</version>
                                             <type>zip</type>
+<!--                                            <groupId>org.camunda.bpm.wildfly</groupId>-->
+<!--                                            <artifactId>camunda-bpm-wildfly</artifactId>-->
+<!--                                            <version>7.21.0</version>-->
+<!--                                            <type>zip</type>-->
                                             <overWrite>false</overWrite>
                                             <outputDirectory>${project.build.directory}</outputDirectory>
                                         </artifactItem>
